--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 <ol>
 <li>The ShinyApp can be found at: (<a href="https://martincote.shinyapps.io/devdataproducts)%5Bhttps://martincote.shinyapps.io/devdataproducts%5D">https://martincote.shinyapps.io/devdataproducts)[https://martincote.shinyapps.io/devdataproducts]</a></li>
 <li>The code (for both the app and this presentation) can be found on GitHub at: (<a href="https://github.com/MartinCote1978/devdataproducts-courseraproject.git)%5Bhttps://github.com/MartinCote1978/devdataproducts-courseraproject.git%5D">https://github.com/MartinCote1978/devdataproducts-courseraproject.git)[https://github.com/MartinCote1978/devdataproducts-courseraproject.git]</a></li>
-<li>The presentation itself was the published on RPubs at: (<a href="http://rpubs.com/martincote/devdataproducts)%5Bhttp://rpubs.com/martincote/devdataproducts%5D">http://rpubs.com/martincote/devdataproducts)[http://rpubs.com/martincote/devdataproducts]</a></li>
+<li>The presentation itself was the published on RPubs at: (<a href="http://martincote1978.github.io/devdataproducts-ppt/index.html)%5Bhttp://martincote1978.github.io/devdataproducts-ppt/index.html%5D">http://martincote1978.github.io/devdataproducts-ppt/index.html)[http://martincote1978.github.io/devdataproducts-ppt/index.html]</a></li>
 </ol>
 
   </article>
